k8s/danbooru-cron.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: danbooru-cron
  namespace: danbooru
  labels:
    app: danbooru-cron

spec:
  replicas: 1

  selector:
    matchLabels:
      app: danbooru-cron

  template:
    metadata:
      labels:
        app: danbooru-cron

    spec:
      hostname: danbooru-cron

      containers:
      - name: danbooru
        image: ghcr.io/danbooru/danbooru:production
        imagePullPolicy: Always

        args: ["bin/rails", "danbooru:cron"]

        volumeMounts:
        - name: danbooru-local-config
          mountPath: "/etc/danbooru"
          readOnly: true

      volumes:
      - name: danbooru-local-config
        secret:
          secretName: danbooru-local-config

      # Only run on the app servers.
      # https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - { key: kubernetes.io/hostname, operator: In, values: [gura, ame, ina] }
