k8s/fumimi.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fumimi
  namespace: danbooru
  labels:
    app: fumimi

spec:
  replicas: 1

  selector:
    matchLabels:
      app: fumimi

  template:
    metadata:
      labels:
        app: fumimi

    spec:
      # hostname: fumimi

      containers:
      - name: fumimi
        image: ghcr.io/danbooru/fumimi-discord:latest
        imagePullPolicy: Always

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - { key: kubernetes.io/hostname, operator: In, values: [gura, ame, ina] }
