k8s/iqdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iqdb
  namespace: danbooru
spec:
  ports:
  - protocol: TCP
    port: 5588
    targetPort: 5588

---

apiVersion: v1
kind: Endpoints
metadata:
  name: iqdb
  namespace: danbooru
subsets:
- addresses:
  - ip: 172.16.0.3 # oogaki
  ports:
  - port: 5588
