k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: danbooru
spec:
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432

---

apiVersion: v1
kind: Endpoints
metadata:
  name: postgres
  namespace: danbooru
subsets:
- addresses:
  - ip: 172.16.0.4 # inuyama
  ports:
  - port: 5432
