k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: danbooru
spec:
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379

---

apiVersion: v1
kind: Endpoints
metadata:
  name: redis
  namespace: danbooru
subsets:
- addresses:
  - ip: 172.16.0.3 # oogaki
  ports:
  - port: 6379
