k8s/betabooru.yaml
# Define a beta Danbooru instance running on betabooru.donmai.us.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: betabooru
  namespace: danbooru
  labels:
    app: betabooru
spec:
  replicas: 1
  selector:
    matchLabels:
      app: betabooru
  template:
    metadata:
      labels:
        app: betabooru
    spec:
      hostname: betabooru
      containers:
      - name: danbooru
        image: ghcr.io/danbooru/danbooru:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000

        volumeMounts:
        - name: danbooru-local-config
          mountPath: "/etc/danbooru"
          readOnly: true

        # http://127.0.0.1:9293/stats is the Puma control endpoint. Note that this
        # endpoint will still respond even if Rails is unresponsive due to
        # being backlogged with slow requests.
        #
        # We use curl instead of httpGet because this endpoint is only listening
        # on localhost so the kubelet can't connect to it from outside.
        #
        # https://github.com/harmjanblok/puma-metrics
        readinessProbe:
          exec:
            command: ["curl", "http://127.0.0.1:9293/stats"]
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 6
          initialDelaySeconds: 5

      # See config/danbooru/nginx.conf for the nginx config.
      - name: openresty
        image: ghcr.io/danbooru/danbooru:latest
        imagePullPolicy: Always
        command: ["openresty"]
        args: ["-e", "/dev/stderr"]
        ports:
        - containerPort: 8080

        # Mount config/danbooru/nginx.conf at /usr/local/nginx/conf/nginx.conf
        volumeMounts:
        - name: danbooru-nginx-config
          mountPath: "/usr/local/nginx/conf"
          readOnly: true

        readinessProbe:
          httpGet:
            path: /nginx/status
            port: 8080
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 6
          initialDelaySeconds: 5

      volumes:
      - name: danbooru-local-config
        secret:
          secretName: danbooru-local-config
      - name: danbooru-nginx-config
        configMap:
          name: danbooru-nginx-config


---

apiVersion: v1
kind: Service
metadata:
  name: betabooru
  namespace: danbooru
spec:
  selector:
    app: betabooru
  ports:
    - port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: betabooru
  namespace: danbooru
spec:
  rules:
    - host: betabooru.donmai.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: betabooru
                port:
                  number: 80
  tls:
    - hosts:
      - betabooru.donmai.us
      secretName: donmai-us-tls
